--- a/Perceptron.ipynb
+++ b/Perceptron.ipynb
@@ -34,7 +34,7 @@
       "source": [
         "import numpy as np\n",
         "\n",
-        "class perceptron(object):\n",
+        "class Perceptron(object):\n",
         "  def __init__(self , threshold = 0,alpha=0.01,epoch=100):\n",
         "    self.alpha = alpha\n",
         "    self.epoch = epoch\n",
@@ -57,7 +57,7 @@
         "        update = self.alpha*(y_n -y_i)*x_n\n",
         "        self.weights = self.weights + update\n",
         "        errors = errors + np.sum(update != 0.0)/(m)\n",
-        "     errors_.append(errors)\n",
+        "      self.errors_.append(errors)\n",
         "\n",
         "       \n",
         "  \n",
@@ -75,15 +75,56 @@
       "metadata": {
         "id": "wxxzPnYmL4PD",
         "colab_type": "code",
-        "colab": {}
+        "outputId": "46c59801-28c3-45ce-d2e3-6f0698e5be99",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 34
+        }
       },
       "source": [
-        "OR = [[0,0,0],[0,1,1],[1,0,1],[1,1,1]]\n",
-        "OR_IN = []\n",
-        "\n"
+        "OR = np.array([[0,0,0],[0,1,1],[1,0,1],[1,1,1]])\n",
+        "OR_Perceptron = Perceptron(0.5,0.1,100)\n",
+        "OR_Perceptron.learn(OR[:,0:2],OR[:,2:])\n",
+        "print(OR_Perceptron.predict([0,0]))\n"
       ],
-      "execution_count": 0,
-      "outputs": []
+      "execution_count": 30,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "-1\n"
+          ],
+          "name": "stdout"
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "Fr9tIkLccLQ2",
+        "colab_type": "code",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 34
+        },
+        "outputId": "8643b9b9-7d68-445f-e0e2-9588e9db480c"
+      },
+      "source": [
+        "AND = np.array([[0,0,0],[0,1,0],[1,0,0],[1,1,1]])\n",
+        "AND_Perceptron = Perceptron(1.5,0.1,100)\n",
+        "AND_Perceptron.learn(AND[:,0:2],AND[:,2:])\n",
+        "print(AND_Perceptron.predict([1,1]))\n"
+      ],
+      "execution_count": 32,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "1\n"
+          ],
+          "name": "stdout"
+        }
+      ]
     }
   ]
 }
